# RaZtracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  RaZtracer.cpp  main.cpp
assets/materials/: cornell.mtl
examples/: main.cpp
include/: Matrix.hpp  Matrix.inl  Scene.hpp  Shape.hpp  Vector.hpp  Vector.inl
include/RaZtracer/: RaZtracer.hpp
include/RaZtracer/Math/: Constants.hpp  Matrix.hpp  Matrix.inl  Quaternion.hpp  Quaternion.inl  Transform.hpp  Vector.hpp  Vector.inl
include/RaZtracer/Render/: Camera.hpp  Light.hpp  Material.hpp  Mesh.hpp  Scene.hpp  Submesh.hpp
include/RaZtracer/Utils/: BVH.hpp  Image.hpp  ModelLoader.hpp  MtlLoader.hpp  RayHit.hpp  Shape.hpp  Vertex.hpp  Window.hpp
src/: Scene.cpp
src/RaZtracer/Math/: Quaternion.cpp  Transform.cpp
src/RaZtracer/Render/: Camera.cpp  Scene.cpp
src/RaZtracer/Utils/: BVH.cpp  Image.cpp  ModelLoader.cpp  MtlLoader.cpp  Shape.cpp  Window.cpp
